--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GROQ_API_KEY=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
-SENDGRID_API_KEY=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
+GROQ_API_KEY="Enter your GROQ API KEY"
+SENDGRID_API_KEY="Enter Your Sendgrid API Key"
